# hec-p-isa-tools

./: .clang-format  .gitignore  .pre-commit-config.yaml  .pylintrc  .typos.toml  CODEOWNERS  CONTRIBUTING.md  HEADER  README.md  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: scorecard.yml
assembler_tools/hec-assembler-tools/: .pre-commit-config.yaml  CODEOWNERS  README.md  atomic_tester.py  gen_he_ops.py  he_as.py  he_link.py  he_prep.py  requirements.txt
assembler_tools/hec-assembler-tools/config/: isa_spec.json
assembler_tools/hec-assembler-tools/debug_tools/: README.md  deadlock_test.py  isolation_test.py  main.py  order_test.py
assembler_tools/hec-assembler-tools/docsrc/: changelog.md  specs.md
assembler_tools/hec-assembler-tools/linker/: __init__.py  loader.py
docs/Encrypted-Computing-SDK/Overview/: EncryptedComputingSDK-Polynomial_Instruction_Set_Architecture_Tools-public.pptx
functional_modeler/: .pre-commit-config.yaml  CPPLINT.cfg
functional_modeler/cmake/: dependencies.cmake
functional_modeler/common/: CMakeLists.txt  config.h.in  string.h
functional_modeler/common/p_isa/: isa_instruction.h  p_isa.h  p_isa_instruction.h  p_isa_instructions.h  p_isa_performance_modeler.cpp  p_isa_performance_modeler.h
functional_modeler/common/p_isa/parser/: p_isa_parser.cpp  p_isa_parser.h
functional_modeler/docs/srcs/: p_isa_instruction_set.md
functional_modeler/functional_modeler/: README.md  main.cpp
functional_modeler/functional_modeler/data_handlers/: hec_dataformats_handler.h  json_data_handler.h
kerngen/: .gitignore  README.md  __init__.py  command.py  data.py  expander.py  generators.py  high_parser.py  highop.py  kerngen.py  kerngraph.py  pisa_operations.py  polys.py  requirements.txt  scratch  scratch.py
kerngen/MatrixExamples/: MATMUL_CypherPlain.ker
kerngen/fuzzing/: high_parser_fuzzer.py
kerngen/high_parser/: __init__.py  config.py  generators.py  highop.py  legacy.py  optional.py  options_handler.py  parser.py  pisa_operations.py  polys.py  types.py
kerngen/kernelLang/: README.md  heracles-kerlang-syntax-0.0.1.vsix  package.json
kerngen/kernel_parser/: __init__.py  parser.py
kerngen/pisa_generators/: add.py  basic.py  decomp.py  generators.py  highop.py  manifest.json  mod.py  modup.py  ntt.py  partial_op.py  relin.py  rescale.py  rotate.py  square.py  sub.py
kerngen/tests/: test_kerngen.py  test_kerngraph_parser.py
kerngen/vsc_kerlang_extension/: heracles-kerlang-syntax-0.0.1.vsix  language-configuration.json
p-isa_tools/: CMakeLists.txt
p-isa_tools/cmake/: dependencies.cmake
p-isa_tools/common/graph/: graph.h
p-isa_tools/common/p_isa/: p_isa_hardware_models.h  p_isa_instruction.cpp
p-isa_tools/common/timer/: timer.h
p-isa_tools/docs/: doxyfile.in
p-isa_tools/functional_modeler/: CMakeLists.txt  README.md
p-isa_tools/functional_modeler/functional_models/: p_isa_functional_model.h  p_isa_memory_model.h
p-isa_tools/functional_modeler/pisa_runtime/: p_isa_instruction_trace.h
p-isa_tools/kerngen/: .gitignore
p-isa_tools/kerngen/high_parser/: options_handler.py
p-isa_tools/kerngen/pisa_generators/: mod.py  relin.py
p-isa_tools/kerngen/vsc_kerlang_extension/: README.md
p-isa_tools/kerngen/vsc_kerlang_extension/grammars/: kerlang.tmLanguage.json
p-isa_tools/kerngen/vsc_kerlang_extension/themes/: kerlang.tmTheme.json
(+183 files in other folders)
